# triangulation2d

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
scripts/: vizualization.py
src/: CMakeLists.txt  main.cpp  plot.cpp  plot.h  preparing.cpp  preparing.h  structures.cpp  structures.h  triangulation.cpp  triangulation.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_triangle.cpp
